<resources>
    <string name="app_name">LoginActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_up">Already Have an Account? Sign Up</string>
    <string name="name">Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="name1">Name</string>
    <string name="enter_username1">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_have_an_account_sign_in">Already Have an Account? Sign In</string>
    <string name="sign_up_for_a_new_account">Sign Up for a New Account</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="don_t_have_an_account_sign_up">Don\'t_have_an_account_sign_up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="home1">Home</string>
    <string name="interests">Interests</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="journalism">Journalism</string>
    <string name="automobile">Automobile</string>
    <string name="history">History</string>
    <string name="environment">Environment</string>
    <string name="politics">Politics</string>
    <string name="philosophy">Philosophy</string>
    <string name="biology">Biology</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="tests">Tests</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="home2">Home</string>
    <string name="science1">Science</string>
    <string name="physical_education">Physical Education</string>
    <string name="arts">Arts</string>
    <string name="commerce">Commerce</string>
    <string name="technology">Technology</string>
    <string name="current_affairs1">Current Affairs</string>
    <string name="tests1">Tests</string>
    <string name="share1">Share</string>
    <string name="feedback1">Feedback</string>
    <string name="edura">EDURA</string>
    <string name="annuuu">\@annuuu</string>
    <string name="navigation_drawer_tutorial">Navigation Drawer Tutorial</string>
    <string name="todo11">TODO</string>
    <string name="federick_johan">Federick Johan</string>
    <string name="federick_johans_gmail_com">federick_johans@gmail.com</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="delete">Delete</string>
    <string name="todo14">TODO</string>
    <string name="settings">Settings</string>
    <string name="todo15">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="status">Status</string>
    <string name="student">Student</string>
    <string name="dob">DOB</string>
    <string name="_25_07_2022">25-07-2022</string>
    <string name="qualification">Qualification</string>
    <string name="state">State</string>
    <string name="mca">MCA</string>
    <string name="new_delhi">New Delhi</string>
    <string name="home11">Home</string>
    <string name="todo21">TODO</string>
    <string name="others">Others</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="zinnias">How to Plant, Grow, and Care for Zinnia Flowers</string>
    <string name="description_zinnias">Zinnias are easy to grow annual flowers that come in a wide variety of colors and sizes. Here are the steps to plant, grow, and care for zinnias:\n\n
<br><b>1. Choose a sunny spot:</b> Zinnias require at least six hours of direct sunlight per day, so choose a spot in your garden that gets plenty of sun.\n\n</br>
<br><b>2. Prepare the soil:</b> Zinnias prefer well-draining soil that is rich in organic matter. Add compost or well-rotted manure to your soil before planting to improve its texture and fertility.\n\n</br>
<br><b>3. Plant the seeds:</b> Zinnias can be grown from seeds, which should be planted in the spring after the last frost. Sow the seeds directly into the soil, spacing them 6-18 inches apart depending on the size of the zinnia variety. Cover the seeds with a light layer of soil and water gently.\n\n</br>
<br><b>4. Water regularly:</b> Keep the soil moist but not waterlogged, especially during hot and dry periods. Zinnias are drought-tolerant, but they will produce more flowers if they are watered regularly.\n\n</br>
<br><b>5. Fertilize occasionally:</b> Zinnias are light feeders and do not require heavy fertilization. You can add a balanced fertilizer to the soil once or twice during the growing season to provide the plants with the nutrients they need.\n\n</br>
<br><b>6. Deadhead spent blooms:</b> Zinnias will continue to produce new flowers if you deadhead (remove) the spent blooms regularly. Use scissors or garden shears to cut the stem just above the first set of leaves.\n\n</br>
<br><b>7. Control pests and diseases:</b> Zinnias are relatively pest and disease-free, but they can be affected by powdery mildew, aphids, and spider mites. If you notice any signs of pests or diseases, treat them promptly with organic or chemical pesticides.\n\n</br>
By following these steps, you can plant, grow, and care for beautiful zinnia flowers that will brighten up your garden all summer long.
    </string>
    <string name="bee">Creating and Managing a Bee Garden</string>
    <string name="description_bee">Creating and managing a bee garden can be a fun and rewarding experience. Here are some steps to get you started:\n\n
<br><b>1. Choose a location:</b> Choose a spot in your yard or garden that gets plenty of sunlight and is protected from strong winds. Ideally, the location should also be close to a source of water, such as a pond or stream.\n\n</br>
<br><b>2. Select the right plants:</b> Choose plants that provide a good source of nectar and pollen for bees. Native wildflowers, herbs, and flowering trees are good choices. Make sure to plant a variety of flowers that bloom at different times throughout the growing season to provide a consistent food source for bees.\n\n</br>
<br><b>3. Provide nesting sites:</b> Bees need a place to lay their eggs and raise their young. You can provide nesting sites by installing bee boxes or providing areas with bare, sandy soil.\n\n</br>
<br><b>4. Avoid pesticides:</b> Bees are sensitive to pesticides and other chemicals. Avoid using pesticides and herbicides in your garden, and opt for organic methods of pest control instead.\n\n</br>
<br><b>5. Maintain your garden:</b> Keep your bee garden healthy and thriving by watering it regularly, removing weeds, and pruning plants as needed.\n\n</br>
<br><b>6. Learn about bees:</b> Educate yourself about the types of bees in your area and their needs. Understanding the behavior of bees can help you create a garden that is attractive to them and supports their health and well-being.\n\n</br>
By following these steps, you can create a bee garden that provides a safe and healthy habitat for bees while also enjoying the beauty of flowering plants in your garden.
    </string>
    <string name="agave">How to Plant, Grow, and Care for Agave Plants</string>
    <string name="description_agave">Agave plants are a type of succulent that are known for their striking appearance and drought tolerance. They can be grown both indoors and outdoors and are relatively low-maintenance. Here are some steps to plant, grow, and care for Agave plants:\n\n
<br><b>1. Choose a suitable location:</b> Agave plants prefer well-draining soil and lots of sunlight. Choose a location that gets at least six hours of direct sunlight each day.\n\n</br>
<br><b>2. Plant the Agave:</b> Dig a hole that is slightly larger than the root ball of the Agave plant. Place the plant in the hole and backfill with soil. Make sure to leave some space around the plant to allow for growth.\n\n</br>
<br><b>3. Water the Agave:</b> Water the Agave plant deeply after planting. After that, water the plant sparingly, allowing the soil to dry out between waterings. Overwatering can cause root rot.\n\n</br>
<br><b>4. Fertilize the Agave:</b> Agave plants do not require much fertilizer. However, you can use a slow-release fertilizer in the spring and summer to encourage growth.\n\n</br>
<br><b>5. Prune the Agave:</b> Remove any dead or damaged leaves from the Agave plant. This will improve its appearance and help prevent disease.\n\n</br>
<br><b>6. Protect the Agave:</b> If you live in a cold climate, protect the Agave plant from frost by covering it with a blanket or moving it indoors.\n\n</br>
<br><b>7. Propagate the Agave:</b> Agave plants can be propagated by removing offsets or pups that grow from the base of the plant. These can be replanted in their own pots or in the garden.\n\n</br>
Overall, Agave plants are relatively low-maintenance and can add a unique and striking element to any garden or indoor space.
    </string>
    <string name="broccoli">How to Plant, Grow, and Care for Broccoli</string>
</resources>